# RPiStreamer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  compose.yaml  docker-bake.hcl  pyproject.toml
deployment/: install.sh
deployment/config/: rpi-streamer.ini
deployment/container/: nginx.Dockerfile  nginx.conf  site.conf
deployment/nginx/: rpi-streamer.conf.template
deployment/systemd/: rpi-streamer.service
deployment/sysusers/: rpi-streamer.conf
deployment/tmpfiles/: rpi-streamer.conf
src/rpi_streamer/: __init__.py  __main__.py  cli.py  config.py  database.py  generator.py  metadata.py  scanner.py  service.py
src/rpi_streamer/static/: style.css
src/rpi_streamer/templates/: base.html  genre.html  genres.html  index.html  title.html
tests/: __init__.py  test_cli.py  test_config.py  test_container.py  test_database.py  test_deployment.py  test_generator.py  test_metadata.py  test_nginx.py  test_scanner.py  test_service.py
